YE improvements